compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__aliased_error_fn.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "import gleam.{Error as Thing}\npub fn go() { Thing }"
---
module rec my.``mod``
let Thing = gleam.Error

let go () = begin
    Thing
end
