compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__aliased_ok.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "import gleam.{Ok as Thing}\npub fn go() { Thing(1) }"
---
module rec my.``mod``

let Thing = gleam.Ok
let go () = begin
    Thing (1L)
end
