compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__error.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "pub fn go() { Error(1) }"
---
module rec my.``mod``
let go () = begin
    Error (1)
end
