compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__error_fn.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "pub fn go() { Error }"
---
module rec my.``mod``
let go () = begin
    Error
end
