compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__ok.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "pub fn go() { Ok(1) }"
---
module rec my.``mod``
let go () = begin
    Ok (1)
end
