compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__ok_fn.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "pub fn go() { Ok }"
---
module rec my.``mod``

let go<'b, 'a> () = begin
    Ok
end
