compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__qualified_error.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "import gleam\npub fn go() { gleam.Error(1) }"
---
module rec my.``mod``


let go () = begin
    gleam.Error (1)
end
