compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__qualified_error_fn.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "import gleam\npub fn go() { gleam.Error }"
---
module rec my.``mod``

let go () = begin
    gleam.Error
end
