compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__qualified_ok.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "import gleam\npub fn go() { gleam.Ok(1) }"
---
module rec my.``mod``

let go () = begin
    gleam.Ok(1L)
end
