compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__results__qualified_ok_fn.snap
---
source: compiler-core/src/fsharp/tests/results.rs
expression: "import gleam\npub fn go() { gleam.Ok }"
---
module rec my.``mod``


let go () = begin
    gleam.Ok
end
